--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   
   <body>
-    <h1>PUT YOUR TITLE HERE</h1>
-    <p>ADD DESCRIPTION HERE</p>
+    <h1>City Bird</h1>
+    <p>my game</p>
     
     <script type="text/processing">
     
