--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <title>Processing Demo</title>
+      <title>City Bird</title>
       <script type="text/javascript" src="js/processing.js"></script>
   </head>
   
   <body>
     <h1>City Bird</h1>
-    <p>my game</p>
+    <p>by:Ameera Odeh</p>
     
     <script type="text/processing">
         PImage citybg, icon, topPipe, bottomPipe;
