--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,10 @@
                     <a href="https://editor.p5js.org/odehameera/embed/6RD8C99a6"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Game_of_life_infinite2.svg/114px-Game_of_life_infinite2.svg.png" width="100" height="100"  alt="100"></a>
                     <h3>Conway's Game Of Life</h3>
                 </div>
+                    <div class="box">
+                    <a href="https://odehameera.github.io/flappybird.html"><img src="https://corona-cdn.coronalabs.com/mp2/u26646/product-media/icon/pic5aeb76bc063c59_512x-_14559038.jpeg" width="100" height="100"  alt="100"></a>
+                    <h3>City Bird</h3>
+                </div>
             </div>
         </section>
         </body>
