--- a/flappybird.html
+++ b/flappybird.html
@@ -1,3 +1,17 @@
+
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <title>Processing Demo</title>
+        <script type="text/javascript" src="js/processing.js"></script>
+    </head>
+    
+    <body>
+        <script type="text/processing">
+            size(600,600);
+            ellipse(200,200,30,20);
+        
+
 /* My City Bird Game
  * Author: Ameera Odeh
  * Date: 12/10/2019
@@ -216,3 +230,9 @@ void setCitybg()
       citybgX=0; //allows for the background to loop 
     }
 }
+
+        </script>
+        <canvas id="sketch" style="border: 1px solid black;"></canvas>
+    </body>
+</html>
+
