--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@
                     <div class="box">
                     <a href="https://odehameera.github.io/flappybird.html"><img src="https://corona-cdn.coronalabs.com/mp2/u26646/product-media/icon/pic5aeb76bc063c59_512x-_14559038.jpeg" width="100" height="100"  alt="100"></a>
                     <h3>City Bird</h3>
+                       </div>
                    <div class="box">
                     <a href="https://editor.p5js.org/odehameera/sketches/SBxFvPeh"><img src="https://cdn.shopify.com/s/files/1/2297/4339/products/7_17b221b5-9696-4548-bcab-da5bc1a4661c_grande.jpg?v=1538191276" width="100" height="100"  alt="100"></a>
                     <h3>Draw</h3>
