--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                     <h3>Conway's Game Of Life</h3>
                 </div>
                     <div class="box">
-                    <a href="https://odehameera.github.io/flappybird.html"><img src="https://corona-cdn.coronalabs.com/mp2/u26646/product-media/icon/pic5aeb76bc063c59_512x-_14559038.jpeg" width="100" height="100"  alt="100"></a>
+                    <a href="https://odehameera.github.io/flappybird.html>"<img src="https://corona-cdn.coronalabs.com/mp2/u26646/product-media/icon/pic5aeb76bc063c59_512x-_14559038.jpeg" width="100" height="100"  alt="100"></a>
                     <h3>City Bird</h3>
                        </div>
                    <div class="box">
